<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Standard" Id="{83f8f447-0eb1-4d0c-b486-f84fc99139ff}">
    <Declaration><![CDATA[{attribute 'Tc2GVLVarNames'}
VAR_GLOBAL
	bstart					:BOOL;
	bSet					:BOOL;
	bstop                   :BOOL;
	
	RealLaserD				AT %I*	 :UINT;
	RealVelocimeterD      	AT %I*   :UDINT;
	RealEncoder				AT %I*	:UINT;
	
	veloreset				AT %Q*	:BOOL;
	

	EncoderD           			   :LREAL;

	REVmove						:BOOL;
	
	target						:UDINT;
		
		
		
	laserSetPoint					:UINT;
	LaserHolder							:UINT;
	LaserD							:UINT;
	
	
	
	VelocimeterSetPoint				:UDINT;
	VelocimeterD                    :UDINT;

	
	
	Reel					:AXIS_REF;
	YAxis					:AXIS_REF;
	
	
	bSetBTN			AT %I*	   	:BOOL;
	bStartBTN       at %I*       :bool;
	bStopBTN        at %I*       :bool;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>