<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="VELOCIMETER" Id="{0b8ac552-5dca-4b11-a926-e1cfd53b31f2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM VELOCIMETER
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[VelocimeterD := ((((RealVelocimeterD - VelocimeterSetPoint) - 15367) * 19790 ) / 45283) + 8482;



]]></ST>
    </Implementation>
    <LineIds Name="VELOCIMETER">
      <LineId Id="11" Count="1" />
      <LineId Id="9" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>